--- a/app/login/form.css
+++ b/app/login/form.css
@@ -5,30 +5,29 @@
   align-items: center;
   justify-items: center;
   align-content: center;
-  padding-top: 15%;
+  padding: 15% 5% 0 5%;
+
 }
+
 .loginform {
   position: absolute;
   top: 10%;
 }
+
 /* From Uiverse.io by Pinparker */
 .form {
   position: relative;
   display: block;
   padding: 2.2rem;
   width: 500px;
-  background: linear-gradient(
-      14deg,
+  background: linear-gradient(14deg,
       rgba(2, 0, 36, 0.8) 0%,
       rgba(24, 24, 65, 0.7) 66%,
-      rgb(20, 76, 99) 100%
-    ),
-    radial-gradient(
-      circle,
+      rgb(20, 76, 99) 100%),
+    radial-gradient(circle,
       rgba(2, 0, 36, 0.5) 0%,
       rgba(32, 15, 53, 0.2) 65%,
-      rgba(14, 29, 28, 0.9) 100%
-    );
+      rgba(14, 29, 28, 0.9) 100%);
   border: 2px solid #fff;
   -webkit-box-shadow: rgba(0, 212, 255) 0px 0px 50px -15px;
   box-shadow: rgba(0, 212, 255) 0px 0px 50px -15px;
@@ -194,6 +193,7 @@
 }
 
 @keyframes flickering {
+
   0%,
   100% {
     opacity: 1;
@@ -246,6 +246,7 @@
 }
 
 @keyframes animateBg {
+
   0%,
   100% {
     transform: scale(1);
