--- a/app/globals.css
+++ b/app/globals.css
@@ -173,11 +173,15 @@ header {
 }
 
 .servicehover {
+  overflow: scroll;
   display: flex;
   flex-wrap: wrap;
+  margin-top: -2%;
   justify-content: start;
   padding: 2% 0 0 2%;
-  align-items: center;
+  /* align-items: center; */
+  height: 600px;
+  overflow: scroll;
   /* height: 500px; */
   background-color: #000000;
   /* gap: 10px; */
@@ -185,9 +189,9 @@ header {
 }
 
 .sercontent {
-  margin: 2% 1% 2% 1%;
+  margin: 0% 1% 0% 1%;
   width: 31%;
-  height: 200px;
+  height: 150px;
   /* height: 150px; */
   cursor: pointer;
 }
@@ -367,8 +371,6 @@ header {
 }
 
 @media only screen and (max-width: 480px) {
-
-
   .displaymain {
     height: 100%;
     width: 100%;
@@ -535,7 +537,6 @@ header {
 }
 
 @media only screen and (max-width: 786px) {
-
   .product1 {
     animation: mainp 1.5s forwards;
   }
@@ -868,6 +869,10 @@ header {
     font-size: 100px;
   }
 }
+.techfoot {
+  position: relative;
+  top: 50px;
+}
 
 /* -------------------------------------------------------FOOTER------------------------------------- */
 .footercontainer {
@@ -895,7 +900,7 @@ header {
 
 .section p {
   font-weight: 500;
-  margin-bottom: 2px;
+  margin: 8px 0;
 }
 
 .clutch-review {
@@ -1390,7 +1395,7 @@ header {
 
 #ourworkhead {
   color: #f8f8f8;
-  margin: 20% 0;
+  margin: 30% 0;
   text-align: center;
   font-size: 20px;
 }
@@ -3635,7 +3640,6 @@ p.subtitle {
 /* Media Queries */
 
 @media (max-width: 768px) {
-
   .column-coin,
   .column-ul-li {
     min-width: 100%;
@@ -3760,7 +3764,7 @@ p.subtitle {
   justify-content: center;
   background-color: #f5f5f5;
   border-radius: 10px;
-  color: #00ffcc;
+  color: #00c4f0;
   padding: 20px;
   width: calc(50% - 10px);
   /* adjust the width to fit two sliders in a row */
@@ -3855,7 +3859,7 @@ p.subtitle {
 .serviceorm i {
   font-size: 36px;
   margin-bottom: 10px;
-  color: #00ffcc;
+  color: #00c4f0;
   display: flex;
   text-align: center;
 }
@@ -4838,7 +4842,6 @@ body {
 }
 
 @media only screen and (max-width: 480px) {
-
   .carausels {
     padding-left: 10%;
   }
@@ -4906,7 +4909,7 @@ body {
   color: #ccc;
 }
 
-.rating-scale input[type="radio"]:checked+label:before {
+.rating-scale input[type="radio"]:checked + label:before {
   color: #ffd700;
 }
 
@@ -4959,7 +4962,7 @@ body {
 
 .containerbor h1 {
   font-size: 36px;
-  font-weight: bold;
+  font-weight: 400;
 }
 
 .featuresbor {
@@ -4982,7 +4985,7 @@ body {
 
 .featurebor i {
   font-size: 50px;
-  color: #00ff00;
+  color: #00e09f;
 }
 
 .featurebor p {
