--- a/app/globals.css
+++ b/app/globals.css
@@ -869,6 +869,7 @@ header {
     font-size: 100px;
   }
 }
+
 .techfoot {
   position: relative;
   top: 50px;
@@ -2751,7 +2752,8 @@ ada
 ++++++++++ */
 .container-adaaa {
   width: 100%;
-  margin: 5% auto;
+  margin: 0% auto;
+  height: auto;
   padding: 5%;
   background-color: #fff;
   display: flex;
@@ -2768,8 +2770,10 @@ ada
 .title-1 {
   color: #000;
   font-size: 30px;
-  font-weight: bold;
+  font-weight: 400;
+  font-family: var(--font--phoenixgaming);
   margin-bottom: 8%;
+  margin-top: 0%;
   /* adjusted margin to 8% */
   text-align: center;
 }
@@ -2819,10 +2823,37 @@ ______________________    */
 
 .container-audit {
   /* background: #000; */
-  max-width: 800px;
+  width: 100%;
+
   margin: 0% auto;
-  padding: 5% 2%;
+  padding: 0% 2%;
   /* adjusted padding to 10% for vertical padding and 2% for horizontal padding */
+}
+
+.container-audit h1 {
+  padding: 5% 0;
+  font-size: 50px;
+}
+
+@media only screen and (max-width: 480px) {
+  .container-adaaa {
+    width: 100%;
+    /* margin: 5% auto; */
+    height: 1200px;
+    padding: -50% 5% 5% 5%;
+    /* padding: 1% 5%; */
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+
+  }
+
+  .title-1 {
+    margin-top: -100%;
+    font-size: 20px;
+  }
 }
 
 .ItHeading {
@@ -3067,27 +3098,18 @@ ______________________    */
 }
 
 .containerul ul {
-  list-style: none;
+  list-style: circle;
   padding: 0;
+  padding-left: 30px;
 }
 
 .containerul li {
   font-size: 18px;
   margin-bottom: 20px;
   position: relative;
-  padding-left: 30px;
 }
 
-.containerul li::before {
-  content: "\f111";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  position: absolute;
-  left: 0;
-  top: 0;
-  font-size: 10px;
-  color: #ffffff;
-}
+.containerul li::before {}
 
 @media (max-width: 600px) {
   .container {
@@ -3381,7 +3403,7 @@ p.subtitle {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: start;
 }
 
 .remote-step i {
@@ -3528,7 +3550,12 @@ p.subtitle {
   }
 
   .phone {
-    font-size: 0.9em;
+    font-size: 0.1em;
+  }
+
+  .phone img {
+    width: 200px;
+    height: 200px;
   }
 }
 
@@ -3569,6 +3596,7 @@ p.subtitle {
 }
 
 .hirbtnmain {
+  /* margin: 5% 0; */
   padding: 5% 0;
   display: flex;
   justify-content: center;
@@ -3640,6 +3668,7 @@ p.subtitle {
 /* Media Queries */
 
 @media (max-width: 768px) {
+
   .column-coin,
   .column-ul-li {
     min-width: 100%;
@@ -4284,7 +4313,13 @@ __________________________________________ *
 
 @media (max-width: 480px) {
   .titlepur {
+    margin: 20px 0;
+    font-weight: 700;
     font-size: 28px;
+  }
+
+  .listpur {
+    padding: 30px 0 30px 40px;
   }
 
   .listpur li {
@@ -4303,6 +4338,7 @@ body {
 }
 
 .containerlap {
+  color: white;
   padding: 50px 20px;
 }
 
@@ -4312,11 +4348,14 @@ body {
 }
 
 .containerlap p {
+  text-align: center;
   font-size: 16px;
   margin-bottom: 50px;
 }
 
 .steps {
+
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -4326,6 +4365,9 @@ body {
 }
 
 .step {
+  width: 30%;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   flex: 1 1 150px;
   margin: 10px;
@@ -4340,6 +4382,9 @@ body {
 }
 
 .step p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 16px;
 }
 
@@ -4456,6 +4501,16 @@ body {
 }
 
 @media (max-width: 480px) {
+
+
+
+  .step {
+    width: 100%;
+    text-align: center;
+    flex: 1 1 150px;
+    margin: 10px;
+  }
+
   .titledob {
     font-size: 24px;
   }
@@ -4479,7 +4534,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  padding: 0 20px;
+  padding: 150px 20px;
 }
 
 .contentsil {
@@ -4531,6 +4586,34 @@ body {
 }
 
 @media (max-width: 480px) {
+  .image-container img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .containersil {
+    height: 1000px;
+  }
+
+  .contentsil {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    max-width: 1200px;
+    /* height: 700px; */
+    width: 100%;
+    padding: 150px 0;
+    flex-wrap: wrap;
+  }
+
+  .contentsil {
+    width: 100%;
+  }
+
+  .text-container {
+    width: 100%;
+  }
+
   .text-container h1 {
     font-size: 24px;
   }
@@ -4909,7 +4992,7 @@ body {
   color: #ccc;
 }
 
-.rating-scale input[type="radio"]:checked + label:before {
+.rating-scale input[type="radio"]:checked+label:before {
   color: #ffd700;
 }
 
@@ -5042,7 +5125,7 @@ body {
 
 .containerbd h1 {
   font-size: 2em;
-  margin-bottom: 20px;
+  margin: 20px 0;
 }
 
 .columnsbd {
@@ -5055,6 +5138,7 @@ body {
   width: 45%;
   text-align: left;
   margin-bottom: 20px;
+  padding-left: 25px;
 }
 
 .columnbd h2 {
@@ -5063,25 +5147,17 @@ body {
 }
 
 .columnbd ul {
-  list-style: none;
+  list-style: circle;
   padding: 0;
 }
 
 .columnbd ul li {
   margin-bottom: 10px;
   position: relative;
-  padding-left: 25px;
+  /* padding-left: 25px; */
 }
 
-.columnbd ul li::before {
-  content: "\f111";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  position: absolute;
-  left: 0;
-  top: 0;
-  color: #ffffff;
-}
+
 
 @media (max-width: 768px) {
   .bd {
